refactor: update Dockerfile for OpenClaw to improve git configuration and dependency installation
- Enhanced git configuration to ensure HTTPS is used for cloning repositories, addressing issues with npm packages that depend on GitHub-hosted repositories.
- Consolidated installation commands to streamline the setup process and improve efficiency.
- Updated comments for clarity and added references to OpenClaw requirements.

--- a/openclaw/docker/Dockerfile
+++ b/openclaw/docker/Dockerfile
@@ -1,36 +1,36 @@
 # ═══════════════════════════════════════════════════════════════════
 # OpenClaw Gateway — Dockerfile
-# Node.js 22 LTS (требование OpenClaw)
-# curl + jq установлены для вызова Python API из SKILL.md скриптов
+# Node.js 22 LTS (требование OpenClaw, https://github.com/openclaw/openclaw)
+# curl + jq для вызова Python API из SKILL.md; git для npm-зависимостей из GitHub
 # ═══════════════════════════════════════════════════════════════════
 
 FROM node:22-slim
 
-# curl — для SKILL.md; jq — JSON; git — npm clone; openssh-client — зависимости openclaw тянутся по ssh:// (libsignal-node и др.)
+ENV HOME=/root \
+    GIT_TERMINAL_PROMPT=0
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
         curl \
         jq \
         git \
-        openssh-client \
     && rm -rf /var/lib/apt/lists/*
 
-# npm-зависимости openclaw (libsignal-node и др.) тянутся по ssh://github.com — в образе нет SSH-ключей.
-# Перенаправляем git на HTTPS, чтобы клонирование шло без ssh.
-RUN git config --global url."https://github.com/".insteadOf "ssh://git@github.com/" && \
-    git config --global url."https://github.com/".insteadOf "git@github.com:"
-
-# Установить OpenClaw глобально (ключевой оркестратор по ТЗ)
-RUN npm config set fetch-timeout 300000 \
+# Зависимости openclaw (@whiskeysockets/baileys → libsignal-node) тянутся по ssh:// —
+# в образе нет SSH-ключей. Записываем .gitconfig вручную и ставим openclaw в ОДНОМ RUN,
+# чтобы git точно использовал HTTPS при вызове из npm.
+RUN mkdir -p /root/.ssh \
+ && printf '[url "https://github.com/"]\n\tinsteadOf = ssh://git@github.com/\n\tinsteadOf = git@github.com:\n' >> /root/.gitconfig \
+ && (git config --global --list | grep -E 'url\.|insteadOf' || true) \
+ && unset GIT_SSH_COMMAND \
+ && npm config set fetch-timeout 300000 \
  && npm config set fetch-retry-mintimeout 20000 \
  && npm config set fetch-retry-maxtimeout 120000 \
  && npm config set fetch-retries 5 \
  && npm install -g openclaw@latest \
  && openclaw --version
 
-# Скопировать entrypoint-скрипт
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 18789
-
 ENTRYPOINT ["/entrypoint.sh"]
