chore: update Dockerfile to include ca-certificates for improved HTTPS support
- Added ca-certificates to the Dockerfile to ensure secure connections during package installations and repository cloning.

--- a/openclaw/docker/Dockerfile
+++ b/openclaw/docker/Dockerfile
@@ -10,6 +10,7 @@ ENV HOME=/root \
     GIT_TERMINAL_PROMPT=0
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+        ca-certificates \
         curl \
         jq \
         git \
