fix: update Dockerfile to include python3 and build-essential for node-gyp compatibility
- Added python3 and build-essential to the Dockerfile to support the compilation of native modules, specifically addressing the lack of prebuilt binaries for @discordjs/opus under Node 22. This change ensures smoother installation of dependencies that require native builds.

--- a/openclaw/docker/Dockerfile
+++ b/openclaw/docker/Dockerfile
@@ -9,11 +9,15 @@ FROM node:22-slim
 ENV HOME=/root \
     GIT_TERMINAL_PROMPT=0
 
+# python3 + build-essential нужны для node-gyp: @discordjs/opus не имеет prebuild под Node 22,
+# npm собирает его из исходников.
 RUN apt-get update && apt-get install -y --no-install-recommends \
         ca-certificates \
         curl \
         jq \
         git \
+        python3 \
+        build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # Зависимости openclaw (@whiskeysockets/baileys → libsignal-node) тянутся по ssh:// —
