fix: update .gitignore to exclude API models from being ignored
- Added exceptions for the api/src/models directory in .gitignore to ensure Pydantic models are tracked, preventing them from being ignored during version control. This change allows for proper management of API model files.

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,6 @@ temp/
 *.bin
 *.safetensors
 models/
+# Исключение: папка api/src/models — это Pydantic-модели API, а не веса/артефакты
+!api/src/models/
+!api/src/models/**
