fix: update volume binding in docker-compose.yml for OpenClaw configuration
- Changed the volume binding for OpenClaw's configuration from a specific JSON file to the entire configuration directory, ensuring that the necessary configuration is available during container initialization. This adjustment prevents errors related to missing configuration files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -279,7 +279,7 @@ services:
       - "18789:18789"
     volumes:
       - ./openclaw/workspace:/root/.openclaw/workspace   # SOUL.md, AGENTS.md, skills/
-      - ./openclaw/openclaw.json:/root/.openclaw/openclaw.json
+      - ./openclaw:/opt/openclaw-config:ro              # конфиг: openclaw.json копируется в entrypoint (избегаем EISDIR при отсутствии файла на хосте)
       - openclaw_data:/root/.openclaw/credentials        # Токены мессенджеров
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
