fix: add PostgreSQL user initialization script and update Makefile
- Added a new volume binding for the `02_users.sql` script in `docker-compose.yml` to initialize user-related tables in PostgreSQL.
- Updated the Makefile to include a new target `init-pg` for applying the user schema to the existing database, enhancing the database setup process.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,6 +132,7 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
       - ./infra/postgres/01_init.sql:/docker-entrypoint-initdb.d/01_init.sql:ro
+      - ./infra/postgres/02_users.sql:/docker-entrypoint-initdb.d/02_users.sql:ro
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
