fix: replace passlib with bcrypt for password hashing in authentication
- Updated the password hashing implementation in the authentication module to use bcrypt directly, removing the dependency on passlib due to compatibility issues with bcrypt 4.1+.
- Modified the Makefile to reflect changes in the admin user creation process, ensuring the password is hashed correctly.
- Adjusted requirements to remove passlib and specify bcrypt version constraints.

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -48,7 +48,7 @@ email-validator==2.2.0
 
 # ── Authentication (JWT + bcrypt) ────────────────────────────────
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+bcrypt>=4.0,<5
 
 # ── File Upload ──────────────────────────────────────────────────
 python-multipart==0.0.20
