--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -50,6 +50,9 @@ email-validator==2.2.0
 python-jose[cryptography]==3.3.0
 bcrypt>=4.0,<5
 
+# ── Шифрование API-ключей провайдеров (БД, задаются в админке) ───
+cryptography>=43.0.0
+
 # ── File Upload ──────────────────────────────────────────────────
 python-multipart==0.0.20
 
