--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,6 +157,7 @@ services:
       - ./infra/postgres/01_init.sql:/docker-entrypoint-initdb.d/01_init.sql:ro
       - ./infra/postgres/02_users.sql:/docker-entrypoint-initdb.d/02_users.sql:ro
       - ./infra/postgres/03_model_providers.sql:/docker-entrypoint-initdb.d/03_model_providers.sql:ro
+      - ./infra/postgres/04_provider_api_keys.sql:/docker-entrypoint-initdb.d/04_provider_api_keys.sql:ro
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
