feat: enhance configuration for LLM model and OpenClaw integration
- Updated .env.example to clarify the usage of LLM_MODEL for both API and OpenClaw.
- Modified docker-compose.yml to include LLM_MODEL and OLLAMA_API_KEY environment variables for improved model management.
- Adjusted chat_router.py to refine the handling of document search results, enhancing the user experience.
- Enhanced entrypoint.sh to dynamically configure the OpenClaw JSON based on the LLM_MODEL, ensuring proper integration with the Ollama service.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ TELEGRAM_BOT_TOKEN=123456789:ABCDEFGHIJKLMNOP_your_token_here
 # ──────────────────────────────────────────────
 # AI MODELS — Имена моделей в Ollama
 # Должны совпадать с именами при `ollama pull`
+# LLM_MODEL используется и API, и OpenClaw (Telegram-агент)
 # ──────────────────────────────────────────────
 LLM_MODEL=qwen3:30b
 VLM_MODEL=qwen3-vl:14b
