feat: add OLLAMA_MODELS_PATH configuration for model data management
- Introduced OLLAMA_MODELS_PATH in .env.example and updated relevant files to support customizable model data paths.
- Modified docker-compose.yml to utilize OLLAMA_MODELS_PATH for GPU and CPU model data storage.
- Updated install.sh and API settings to reflect the new model data path configuration.
- Enhanced frontend settings page to allow users to specify the model data path, improving flexibility in deployment.

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,13 @@ POSTGRES_PASSWORD=change_me_strong_password_2
 TELEGRAM_BOT_TOKEN=123456789:ABCDEFGHIJKLMNOP_your_token_here
 
 # ──────────────────────────────────────────────
+# OLLAMA — путь к данным моделей на хосте
+# По умолчанию /home/ollama-models — после удаления проекта модели не перекачиваются.
+# В Web UI: Настройки → «Путь к данным моделей Ollama». Для применения задайте здесь и перезапустите контейнеры.
+# ──────────────────────────────────────────────
+OLLAMA_MODELS_PATH=/home/ollama-models
+
+# ──────────────────────────────────────────────
 # AI MODELS — Имена моделей в Ollama
 # Должны совпадать с именами при `ollama pull`
 # LLM_MODEL используется и API, и OpenClaw (Telegram-агент)
