feat: enhance Caddy configuration and certificate management
- Added CADDY_DATA_PATH variable to .env.example for customizable certificate storage.
- Updated docker-compose.yml to bind mount CADDY_DATA_PATH for persistent certificate storage.
- Enhanced install.sh to clarify that Caddy certificates are retained during teardown.
- Documented CADDY_TLS variable for handling Let's Encrypt limits and self-signed certificates.
- Improved troubleshooting documentation for Caddy certificate management in TROUBLESHOOTING_WEB.md.

--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,15 @@ SERVER_HOST=ai.example.com
 # ACME_EMAIL: email для уведомлений Let's Encrypt (только при доменном режиме)
 ACME_EMAIL=admin@example.com
 
+# CADDY_DATA_PATH: каталог на хосте для хранения сертификатов Caddy (Let's Encrypt / self-signed).
+# Не удаляется при make teardown или install.sh --teardown — сертификат сохраняется между переустановками.
+CADDY_DATA_PATH=/var/lib/caddy-certificates
+
+# CADDY_TLS: при лимите Let's Encrypt (429) задайте internal — Caddy будет использовать
+# самоподписанный сертификат, сайт откроется (браузер покажет предупреждение).
+# После истечения лимита уберите переменную и перезапустите Caddy.
+# CADDY_TLS=internal
+
 # JWT_SECRET_KEY: длинная случайная строка (мин. 32 символа)
 # Генерация: openssl rand -hex 32
 JWT_SECRET_KEY=change-me-generate-with-openssl-rand-hex-32
