feat: implement web search functionality using Serper API
- Added support for web search in chat, allowing users to retrieve current information from the internet.
- Introduced a new setting for the Serper API key in the configuration.
- Updated API routes to handle web search requests and integrated it into the chat message flow.
- Enhanced frontend components to support image attachments in chat messages, allowing for a multimodal experience.
- Improved user interface to facilitate image uploads and display attached images in the chat.

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,9 @@ QDRANT_COLLECTION=documents
 # ──────────────────────────────────────────────
 OPENCLAW_AUTO_UPDATE=false
 
+# Веб-поиск в чате (опционально): Serper API key с https://serper.dev
+# WEB_SEARCH_API_KEY=your_serper_api_key
+
 # ──────────────────────────────────────────────
 # WEB UI — ДОМЕН, HTTPS, АУТЕНТИФИКАЦИЯ
 # ──────────────────────────────────────────────
